# Voicevideo

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
assets/: Admin.html  ArticleRewrite.html  BannerGenerate.html  BannerPriviewFrameSection.html  BannerPriviewLocalImage.html  CssJsHtmlToUtf8Withbom.py  LinkVideoExtract.html  Publish.html  StartUp.html  VideoCut.html  VideoGernerate.html  VoiceGernerate.html
assets/css/: ArticleRewrite.css  BannerGenerate.css  BannerPriviewFrameSection.css  BannerPriviewLocalImage.css  LinkVideoExtract.css  Publish.css  VideoCut.css  VideoGernerate.css  VoiceGernerate.css  admin.css  app.css  startup.css
assets/js/: admin.js  app.js  startup.js
server/: requirements.txt  run.py  windowsrun.cmd
server/app/: activation.py  config.py  db.py  db_migrate.py  main.py  models.py  security.py
server/app/api/: __init__.py  admin.py  auth.py  health.py  update.py
server/data/: users.db
src/: Voicevideo.cpp  Voicevideo.exe.manifest  Voicevideo.h  Voicevideo.rc.in
src/largui/: CLarWebview.cpp  CLarWebview.h  ILarWebView.h  LarWebViewFactory.cpp  LarWebViewMacOS.cpp  LarWebViewMacOS.h  LarWebviewHostBase.cpp  LarWebviewHostBase.h  WndShadow.cpp  WndShadow.h
tools/: build_sfx_index.py  check_xiaohongshu_login.py  douyin-mcp-qrcode.patch  ensure_dashscope_deps.py  ensure_rewrite_model.py  ensure_tts_model.py  ensure_video_model.py  extract_link.py  generate_banner.py  generate_video.py  generate_video_cloud.py  generate_voice.py  generate_voice_cloud.py  kuaishou_mcp_service.py  manage_activation_codes.py  publish_douyin.py  publish_kuaishou.py  publish_xiaohongshu.py  rewrite_text.py  rewrite_text_cloud.py  setup_douyin_mcp.ps1  setup_kuaishou_mcp.ps1  setup_xiaohongshu_mcp.ps1  sync_localdep.cmake  test_dashscope_getpolicy.py  video_cut.py
